--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 node_modules/
-
+public/bundle.js
+public/bundle.js.map
+public/styles.css
+public/styles.css.map
 2.19.3
-
 4.2.1
-
 .vscode/
-
 git/
