--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "firebase": "4.2.0",
+    "history": "4.7.2",
     "hoek": "^5.0.3",
     "moment": "^2.22.2",
     "node-sass": "^4.5.3",
